--- a/TaxiKit.Core/TaxiKit.Core/packages.config
+++ b/TaxiKit.Core/TaxiKit.Core/packages.config
@@ -1,19 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Akka" version="1.0.3" targetFramework="net46" />
-  <package id="Akka.Cluster" version="1.0.3.11-beta" targetFramework="net46" />
-  <package id="Akka.DI.Core" version="1.0.3" targetFramework="net46" />
-  <package id="Akka.Logger.Serilog" version="1.0.3" targetFramework="net46" />
-  <package id="Akka.Remote" version="1.0.3" targetFramework="net46" />
-  <package id="Castle.Core" version="3.3.0" targetFramework="net46" />
+  <package id="Akka" version="1.0.4" targetFramework="net452" />
+  <package id="Akka.Cluster" version="1.0.4.12-beta" targetFramework="net452" />
+  <package id="Akka.DI.Core" version="1.0.4" targetFramework="net452" />
+  <package id="Akka.Logger.Serilog" version="1.0.4" targetFramework="net452" />
+  <package id="Akka.Remote" version="1.0.4" targetFramework="net452" />
+  <package id="Castle.Core" version="3.3.3" targetFramework="net452" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net46" />
-  <package id="Google.ProtocolBuffers" version="2.4.1.521" targetFramework="net46" />
-  <package id="Helios" version="1.4.0" targetFramework="net46" />
+  <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net452" />
+  <package id="Helios" version="1.4.1" targetFramework="net452" />
   <package id="Microsoft.Bcl.Immutable" version="1.0.34" targetFramework="net46" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net46" />
-  <package id="Rx-Core" version="2.2.5" targetFramework="net46" />
-  <package id="Rx-Interfaces" version="2.2.5" targetFramework="net46" />
-  <package id="Rx-Linq" version="2.2.5" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
+  <package id="Rx-Core" version="2.3.0-beta2" targetFramework="net452" />
+  <package id="Rx-Interfaces" version="2.3.0-beta2" targetFramework="net452" />
+  <package id="Rx-Linq" version="2.3.0-beta2" targetFramework="net452" />
   <package id="Serilog" version="1.5.9" targetFramework="net46" />
   <package id="StackExchange.Redis" version="1.0.481" targetFramework="net452" />
 </packages>
